Stop sidebar text poking out behind search results

--- a/resources/main.css
+++ b/resources/main.css
@@ -49,7 +49,7 @@ h1 a {
 .search {
   position: absolute;
   top: 0;
-  left: calc(100% - 444px);
+  left: calc(100% - 445px);
   z-index: 2;
   width: 400px;
   padding-top: 4px;
